test_apps/c/ffi/include/liter_llm.h

typedef uint64_t LITERLLMAlefHandle;
LITERLLMAlefHandle literllm_assistant_message_from_json(const char *json);
char *literllm_assistant_message_to_json(LITERLLMAlefHandle handle);
void literllm_assistant_message_free(LITERLLMAlefHandle handle);
char *literllm_audio_content_to_json(LITERLLMAlefHandle handle);
void literllm_audio_content_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_batch_list_query_from_json(const char *json);
void literllm_batch_list_query_free(LITERLLMAlefHandle handle);
char *literllm_batch_list_response_to_json(LITERLLMAlefHandle handle);
void literllm_batch_list_response_free(LITERLLMAlefHandle handle);
char *literllm_batch_object_to_json(LITERLLMAlefHandle handle);
void literllm_batch_object_free(LITERLLMAlefHandle handle);
char *literllm_budget_config_to_json(LITERLLMAlefHandle handle);
void literllm_budget_config_free(LITERLLMAlefHandle handle);
char *literllm_cache_config_to_json(LITERLLMAlefHandle handle);
void literllm_cache_config_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_catalog_refresh_config_from_json(const char *json);
char *literllm_catalog_refresh_config_to_json(LITERLLMAlefHandle handle);
void literllm_catalog_refresh_config_free(LITERLLMAlefHandle handle);
char *literllm_chat_completion_chunk_to_json(LITERLLMAlefHandle handle);
void literllm_chat_completion_chunk_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_chat_completion_request_from_json(const char *json);
void literllm_chat_completion_request_free(LITERLLMAlefHandle handle);
char *literllm_chat_completion_response_to_json(LITERLLMAlefHandle handle);
void literllm_chat_completion_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_batch_request_from_json(const char *json);
void literllm_create_batch_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_file_request_from_json(const char *json);
void literllm_create_file_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_image_request_from_json(const char *json);
void literllm_create_image_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_response_request_from_json(const char *json);
void literllm_create_response_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_speech_request_from_json(const char *json);
void literllm_create_speech_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_transcription_request_from_json(const char *json);
void literllm_create_transcription_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_custom_provider_config_from_json(const char *json);
void literllm_custom_provider_config_free(LITERLLMAlefHandle handle);
char *literllm_decoded_data_url_to_json(LITERLLMAlefHandle handle);
void literllm_default_client_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_embedding_request_from_json(const char *json);
void literllm_embedding_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_file_list_query_from_json(const char *json);
void literllm_file_list_query_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_llm_config_from_json(const char *json);
void literllm_llm_config_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_moderation_request_from_json(const char *json);
void literllm_moderation_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_ocr_request_from_json(const char *json);
void literllm_ocr_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_rerank_request_from_json(const char *json);
void literllm_rerank_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_search_request_from_json(const char *json);
void literllm_search_request_free(LITERLLMAlefHandle handle);
void literllm_singleflight_result_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_wait_for_batch_config_from_json(const char *json);
void literllm_wait_for_batch_config_free(LITERLLMAlefHandle handle);