packages/csharp/LiterLlm/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:2bcf68f06d331fec2714cae99aec2636ec3b3e4e1e35d5af29dd649081d02892
// alef:handle-abi:1
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace LiterLlm;

internal static partial class NativeMethods
{
    private const string LibName = "liter_llm_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_free")]
    internal static extern void DefaultClientFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_singleflight_result_free")]
    internal static extern void SingleflightResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_from_json")]
    internal static extern ulong AssistantMessageFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_free")]
    internal static extern void AssistantMessageFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_query_from_json")]
    internal static extern ulong BatchListQueryFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_query_free")]
    internal static extern void BatchListQueryFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_catalog_refresh_config_from_json")]
    internal static extern ulong CatalogRefreshConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_catalog_refresh_config_free")]
    internal static extern void CatalogRefreshConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_request_from_json")]
    internal static extern ulong ChatCompletionRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_request_free")]
    internal static extern void ChatCompletionRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_batch_request_from_json")]
    internal static extern ulong CreateBatchRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_batch_request_free")]
    internal static extern void CreateBatchRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_file_request_from_json")]
    internal static extern ulong CreateFileRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_file_request_free")]
    internal static extern void CreateFileRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_image_request_from_json")]
    internal static extern ulong CreateImageRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_image_request_free")]
    internal static extern void CreateImageRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_response_request_from_json")]
    internal static extern ulong CreateResponseRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_response_request_free")]
    internal static extern void CreateResponseRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_speech_request_from_json")]
    internal static extern ulong CreateSpeechRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_speech_request_free")]
    internal static extern void CreateSpeechRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_transcription_request_from_json")]
    internal static extern ulong CreateTranscriptionRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_transcription_request_free")]
    internal static extern void CreateTranscriptionRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_custom_provider_config_from_json")]
    internal static extern ulong CustomProviderConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_custom_provider_config_free")]
    internal static extern void CustomProviderConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_request_from_json")]
    internal static extern ulong EmbeddingRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_request_free")]
    internal static extern void EmbeddingRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_query_from_json")]
    internal static extern ulong FileListQueryFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_query_free")]
    internal static extern void FileListQueryFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_llm_config_from_json")]
    internal static extern ulong LlmConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_llm_config_free")]
    internal static extern void LlmConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_request_from_json")]
    internal static extern ulong ModerationRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_request_free")]
    internal static extern void ModerationRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_request_from_json")]
    internal static extern ulong OcrRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_request_free")]
    internal static extern void OcrRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_request_from_json")]
    internal static extern ulong RerankRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_request_free")]
    internal static extern void RerankRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_request_from_json")]
    internal static extern ulong SearchRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_request_free")]
    internal static extern void SearchRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_from_json")]
    internal static extern ulong WaitForBatchConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_free")]
    internal static extern void WaitForBatchConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_assistant_message_to_json")]
    internal static extern IntPtr AssistantMessageToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_audio_content_to_json")]
    internal static extern IntPtr AudioContentToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_audio_content_free")]
    internal static extern void AudioContentFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_response_to_json")]
    internal static extern IntPtr BatchListResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_response_free")]
    internal static extern void BatchListResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_object_to_json")]
    internal static extern IntPtr BatchObjectToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_object_free")]
    internal static extern void BatchObjectFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_budget_config_to_json")]
    internal static extern IntPtr BudgetConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_budget_config_free")]
    internal static extern void BudgetConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_cache_config_to_json")]
    internal static extern IntPtr CacheConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_cache_config_free")]
    internal static extern void CacheConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_catalog_refresh_config_to_json")]
    internal static extern IntPtr CatalogRefreshConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_chunk_to_json")]
    internal static extern IntPtr ChatCompletionChunkToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_chunk_free")]
    internal static extern void ChatCompletionChunkFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_response_to_json")]
    internal static extern IntPtr ChatCompletionResponseToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_response_free")]
    internal static extern void ChatCompletionResponseFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_decoded_data_url_to_json")]
    internal static extern IntPtr DecodedDataUrlToJson(ulong ptr);
